--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+title: Stuart's PGCert Portfolio
+description: Reflections and artefacts from my PGCert in Higher Education
+url: "https://stueyG1t.github.io"
 remote_theme: mmistakes/so-simple-theme
+plugins:
+  - jekyll-remote-theme
 # remote_theme: mmistakes/so-simple-theme
 skin: "/assets/css/skins/default.css"
 locale: en-EN
-title: "My Awesome Site"
-description: "It really is the best."
 baseurl: "/PGCert" # the subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: # path of site logo, e.g. "/images/logo.png"
