--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,12 @@ description: Reflections and artefacts from my PGCert in Higher Education
 baseurl: "/PGCert" # the subpath of your site
 url: "https://stueyG1t.github.io" # the full base URL of your site
 
+exclude:
+  - README-OLD.md
+  - example/
+  - docs/
+  - .gitignore
+  - .DS_Store
 remote_theme: mmistakes/so-simple-theme
 
 plugins:
