--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,8 @@ locale: en-EN
 date_format: "%B %-d, %Y"
 
 google_fonts:
-  - name: "Source Sans Pro"
-    weights: "400,400i,700,700i"
-  - name: "Lora"
-    weights: "400,400i,700,700i"
+  - name: "Inter"
+    weights: "400,500,700"
 
 # Optional features
 mathjax:
