--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
 
-skin: "/assets/css/skins/default.css"
+# skin: "/assets/css/skins/default.css"
 locale: en-EN
 date_format: "%B %-d, %Y"
 
